--- a/app/single-reviews.html
+++ b/app/single-reviews.html
@@ -88,11 +88,13 @@
 
 				<p>Ссылка на Антона: <a target="_blank" rel="nofollow" href="https://vk.com/id17365230">vk.com/id17365230</a></p>
 
-				<h3>2. Максим Буханов</h3>
+				<h3>2. Максим Б.</h3>
 
 				<img src="img/reviev-1.jpg" alt="image" class="img-responsive">
 
 				<p>Максим проходил наше обучение по запуску бизнеса на Amazon и запустил товары на Amazon по стратегии Онлайн Арбитраж</p>
+
+				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
 
 				<p><strong>1) Расскажи, когда ты начал обучение у нас и почему решил выбрать бизнес на Amazon? </strong></p>
 
@@ -116,7 +118,7 @@
 
 				<p>Ссылка на Максима: <a target="_blank" rel="nofollow" href="vk.com/mbukhanov">vk.com/mbukhanov</a></p>
 
-				<h3>3. Алексей Хлыстов</h3>
+				<h3>3. Алексей Х.</h3>
 
 				<div class="video">
 					<iframe src="https://www.youtube.com/embed/4R5jp0-Sh50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
