--- a/app/single-reviewsOLD.html
+++ b/app/single-reviewsOLD.html
@@ -116,7 +116,7 @@
 
 				<p>Ссылка на Максима: <a target="_blank" rel="nofollow" href="vk.com/mbukhanov">vk.com/mbukhanov</a></p>
 
-				<h3>3. Алексей Хлыстов</h3>
+				<h3>3. Алексей Х.</h3>
 
 				<div class="video">
 					<iframe src="https://www.youtube.com/embed/4R5jp0-Sh50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
