--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,21 @@
 				<div class="gallery owl-carousel desktop-gallery">
 
 					<div class="slide-item">
+						<h5>Июль 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/7/1.jpg" alt="Июль 2020">
+							<img src="img/slides/7/2.jpg" alt="Июль 2020">
+							<img src="img/slides/7/3.jpg" alt="Июль 2020">
+						</div>
+						<h5>Июнь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/7/4.jpg" alt="Июнь 2020">
+							<img src="img/slides/7/5.jpg" alt="Июнь 2020">
+							<img src="img/slides/7/6.jpg" alt="Июнь 2020">
+						</div>
+					</div>
+
+					<div class="slide-item">
 						<h5>Июль 2019</h5>
 						<div class="res-imgs">
 							<img src="img/slides/6/1.jpg" alt="Июль 2019">
@@ -214,6 +229,24 @@
 				<div class="gallery owl-carousel mobile-gallery">
 
 					<div class="slide-item">
+						<h5>Июль 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/7/1.jpg" alt="Июль 2020">
+							<img src="img/slides/7/2.jpg" alt="Июль 2020">
+							<img src="img/slides/7/3.jpg" alt="Июль 2020">
+						</div>
+					</div>
+
+					<div class="slide-item">
+						<h5>Июнь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/7/4.jpg" alt="Июнь 2020">
+							<img src="img/slides/7/5.jpg" alt="Июнь 2020">
+							<img src="img/slides/7/6.jpg" alt="Июнь 2020">
+						</div>
+					</div>
+
+					<div class="slide-item">
 						<h5>Июль 2019</h5>
 						<div class="res-imgs">
 							<img src="img/slides/6/1.jpg" alt="Июль 2019">
@@ -270,54 +303,54 @@
 					<div class="slide-item">
 						<h5>Январь 2019</h5>
 						<div class="res-imgs">
-							<img src="img/slides/3/1.jpg" alt="">
-							<img src="img/slides/3/2.jpg" alt="">
-							<img src="img/slides/3/3.jpg" alt="">
+							<img src="img/slides/3/1.jpg" alt="Январь 2019">
+							<img src="img/slides/3/2.jpg" alt="Январь 2019">
+							<img src="img/slides/3/3.jpg" alt="Январь 2019">
 						</div>
 					</div>
 
 					<div class="slide-item">
 						<h5>Февраль 2019</h5>
 						<div class="res-imgs">
-							<img src="img/slides/3/4.jpg" alt="">
-							<img src="img/slides/3/5.jpg" alt="">
-							<img src="img/slides/3/6.jpg" alt="">
+							<img src="img/slides/3/4.jpg" alt="Февраль 2019">
+							<img src="img/slides/3/5.jpg" alt="Февраль 2019">
+							<img src="img/slides/3/6.jpg" alt="Февраль 2019">
 						</div>
 					</div>
 
 					<div class="slide-item">
 						<h5>Ноябрь 2018</h5>
 						<div class="res-imgs">
-							<img src="img/slides/1/1.jpg" alt="">
-							<img src="img/slides/1/2.jpg" alt="">
-							<img src="img/slides/1/3.jpg" alt="">
+							<img src="img/slides/1/1.jpg" alt="Ноябрь 2018">
+							<img src="img/slides/1/2.jpg" alt="Ноябрь 2018">
+							<img src="img/slides/1/3.jpg" alt="Ноябрь 2018">
 						</div>
 					</div>
 
 					<div class="slide-item">
 						<h5>Декабрь 2018</h5>
 						<div class="res-imgs">
-							<img src="img/slides/1/4.jpg" alt="">
-							<img src="img/slides/1/5.jpg" alt="">
-							<img src="img/slides/1/6.jpg" alt="">
+							<img src="img/slides/1/4.jpg" alt="Декабрь 2018">
+							<img src="img/slides/1/5.jpg" alt="Декабрь 2018">
+							<img src="img/slides/1/6.jpg" alt="Декабрь 2018">
 						</div>
 					</div>
 
 					<div class="slide-item">
 						<h5>Сентябрь 2018</h5>
 						<div class="res-imgs">
-							<img src="img/slides/1/1.jpg" alt="">
-							<img src="img/slides/1/2.jpg" alt="">
-							<img src="img/slides/1/3.jpg" alt="">
+							<img src="img/slides/1/1.jpg" alt="Сентябрь 2018">
+							<img src="img/slides/1/2.jpg" alt="Сентябрь 2018">
+							<img src="img/slides/1/3.jpg" alt="Сентябрь 2018">
 						</div>
 					</div>
 
 					<div class="slide-item">
 						<h5>Октябрь 2018</h5>
 						<div class="res-imgs">
-							<img src="img/slides/1/4.jpg" alt="">
-							<img src="img/slides/1/5.jpg" alt="">
-							<img src="img/slides/1/6.jpg" alt="">
+							<img src="img/slides/1/4.jpg" alt="Октябрь 2018">
+							<img src="img/slides/1/5.jpg" alt="Октябрь 2018">
+							<img src="img/slides/1/6.jpg" alt="Октябрь 2018">
 						</div>
 					</div>
 					
