changes for egor

--- a/app/single-reviews.html
+++ b/app/single-reviews.html
@@ -116,7 +116,7 @@
 
 				<p>В целом всё хорошо, если чего-то не хватало, то я просил это объяснить и получал ответ. Пару раз вы даже добавляли видео-уроки по моим просьбам. В целом я более чем доволен.</p>
 
-				<p>Ссылка на Максима: <a target="_blank" rel="nofollow" href="vk.com/mbukhanov">vk.com/mbukhanov</a></p>
+				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
 
 				<h3>3. Алексей Х.</h3>
 
