add yandex Metrika targets

--- a/app/index.html
+++ b/app/index.html
@@ -219,7 +219,7 @@
 							<img src="img/slides/2/6.jpg" alt="Октябрь 2018">
 						</div>
 					</div>
-						
+					
 				</div>
 
 
@@ -410,7 +410,7 @@
 
 				<div id="booking" class="callback-form">
 
-					<form class="form open-form" onsubmit="yaCounter52943497.reachGoal('open_steps'); return true;" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
+					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
 						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
 						время</span></span></div>
 						<!-- Hidden Required Fields -->
@@ -458,7 +458,7 @@
 
 	<div class="d-none">
 
-		<form class="form popup-form zoom-anim-dialog" id="take-consultation" onsubmit="yaCounter52943497.reachGoal('take_consultation_second'); return true;">
+		<form class="form popup-form zoom-anim-dialog" id="take-consultation" onsubmit="ym(65271577,'reachGoal','consultation-form')">
 			<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
 			время</span></span></div>
 			<h4>Получить консультацию</h4>
@@ -499,20 +499,20 @@
 	<script src="js/scripts.min.js"></script>
 
 	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(65271577, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/65271577" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+		ym(65271577, "init", {
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/65271577" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 
 
 
