--- a/app/single-learn.html
+++ b/app/single-learn.html
@@ -126,7 +126,7 @@
 
 				<div id="booking" class="callback-form">
 
-					<form class="form open-form" onsubmit="yaCounter52943497.reachGoal('open_steps'); return true;" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
+					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
 						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
 						время</span></span></div>
 						<!-- Hidden Required Fields -->
@@ -174,7 +174,7 @@
 
 	<div class="d-none">
 
-		<form class="form popup-form zoom-anim-dialog" id="take-consultation" onsubmit="yaCounter52943497.reachGoal('take_consultation_second'); return true;">
+		<form class="form popup-form zoom-anim-dialog" id="take-consultation" onsubmit="ym(65271577,'reachGoal','consultation-form')">
 			<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
 			время</span></span></div>
 			<h4>Получить консультацию</h4>
