add new post 'single-online.html'

--- a/app/index-blog.html
+++ b/app/index-blog.html
@@ -81,6 +81,13 @@
 
 			<div class="type-block">
 
+				<a href="/blog/single-online.html" class="type-item">
+					<p>Онлайн Арбитраж на Amazon</p>
+					<img src="img/blog/single-online.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Сегодня мы поговорим с вами о стратегии Онлайн Арбитраж (ОА) на Amazon.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
 				<a href="/blog/single-not-difficult.html" class="type-item">
 					<p>Почему зарабатывать от 3000$ в месяц через Amazon не так уж и сложно?!</p>
 					<img src="img/blog/single-not-difficult.jpg" alt="image" class="img-responsive">
