--- a/app/index-blog.html
+++ b/app/index-blog.html
@@ -81,6 +81,13 @@
 
 			<div class="type-block">
 
+				<a href="/blog/single-sell-on-marketplace.html" class="type-item">
+					<p>Что выгоднее: торговать на Amazon или на других маркетплейсах?!</p>
+					<img src="img/blog/single-sell-on-marketplace.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Нам очень часто задают подобные вопросы, поэтому решили написать пост на эту тему и подробно разобрать ситуацию.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
 				<a href="/blog/single-online.html" class="type-item">
 					<p>Онлайн Арбитраж на Amazon</p>
 					<img src="img/blog/single-online.jpg" alt="image" class="img-responsive">
