--- a/app/index-video.html
+++ b/app/index-video.html
@@ -125,6 +125,26 @@
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
+				<a href="#video-5" class="type-item video-item open-form-button">
+					<p>Отзыв Антона Новикова об обучении Amazing Cash</p>
+					<div class="play-video" style="background-image: url('img/video-5.png');">
+						<span class="play">
+							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
+						</span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-6" class="type-item video-item open-form-button">
+					<p>Отзыв Елены Тим об обучении Amazing Cash</p>
+					<div class="play-video" style="background-image: url('img/video-6.png');">
+						<span class="play">
+							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
+						</span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
 			</div>
 
 		</div>
@@ -202,10 +222,18 @@
 
 		<div class="popup-video zoom-anim-dialog" id="video-3">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/-VlFsahlmHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>-
+		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-4">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/xmB6UzcRMZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-5">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-6">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/CxKPNwrFcWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
 		<form class="form popup-form zoom-anim-dialog" id="take-consultation" onsubmit="ym(65271577,'reachGoal','consultation-form')">
