--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<link rel="stylesheet" href="css/main.min.css?v=2.0">
+	<link rel="stylesheet" href="css/main.min.css?v=2.1">
 
 </head>
 
@@ -390,6 +390,11 @@
 					<a href="https://vc.ru/trade/55789-kak-prodvigat-tovar-na-amazon" rel="nofollow" target="_blank"><img src="img/news-1.png" alt="vc-logo"></a>
 					<a href="https://bi-school.ru/kak-zapustit-7-magazinov-na-amazon/" rel="nofollow" target="_blank"><img src="img/news-2.png" alt="bi-school-logo"></a>
 					<a href="https://moneymakerfactory.ru/internet/kak-zarabatyivat-na-amazon/" rel="nofollow" target="_blank"><img src="img/MMF-logo-black.png" alt="mmf-logo"></a>
+					<a href="https://the-locality.ru/amazingcash/" target="blank" class="sm-public philosopher"><span>THE LOCALITY</span></a>
+					<a href="https://svdelo.ru/biznes-na-amazon/" target="blank" class="sm-public"><span>СВОЕДЕЛО</span></a>
+					<a href="https://exiterra.com/blog/biznes-idei/prodazhi-tovarov-v-ssha-cherez-sayt-amazon-iz-lyuboy-tochki-mira/" target="blank" rel="nofollow" class="sm-public"><span>Exiterra</span></a>
+					<a href="https://wall.wayxar.ru/finance/kak_postroit_dokhod_v_dollarakh_zhivya_v_rossii_pri_padayushchem_ruble" target="blank" rel="nofollow" class="sm-public"><span>Wayaxar.wall</span></a>
+					<a href="https://slovodelu.by/expert-opinion/kak-zapustit-internet-magazin-v-ssha-i-zarabatyvat-v-dollarakh/" target="blank" rel="nofollow" class="sm-public"><span>Слово Делу</span></a>
 				</div>
 
 			</div>
