--- a/app/single-registration-2.html
+++ b/app/single-registration-2.html
@@ -108,11 +108,13 @@
 
 				<p>Главное, будьте вежливы и не пытайтесь «качать права». После отправки подобного сообщения вашу проблему должны рассмотреть и ваш аккаунт должен быть разморожен! Ниже вы можете увидеть результат после данного письма от нашего клиента на запуск магазина на Amazon «под ключ»:</p>
 
-				<img src="img/blog/single-registration-2-img-1.jpg" alt="" class="img-responsive">
+				<img src="img/blog/single-registration-2-img-1.jpg" alt="image" class="img-responsive">
 
 				<h2>5. Что делать, если я не нахожу Россию в списке стран для регистрации?!</h2>
 
 				<p>Если у вас возникла такая проблема, то обязательно прочитайте данный пост Вконтакте: <a href="https://vk.com/wall-107753250_5426" target="blank">vk.com/wall-107753250_5426</a>. В неё подробно рассказывается, как найти Россию в списке стран.</p>
+
+				<img src="img/blog/single-registration-img-1.jpg" alt="image" class="img-responsive">
 
 				<h2>6. Сколько времени сейчас занимает регистрация?!</h2>
 
@@ -135,7 +137,7 @@
 					<li>Не подготовиться к регистрации и начать проходить регистрацию наугад.</li>
 				</ol>
 
-				<h2>Внимательно проходите регистрацию, не торопитесь, перепроверяйте себя по несколько раз, и у вас получится зарегистрироваться на Amazon.</h2>
+				<h2>Внимательно проходите регистрацию, не торопитесь, перепроверяйте себя по несколько раз, и у вас получится зарегистрироваться на Amazon. При этом, если вы получили бан, не стоит расстраиваться. Это бывает, даже когда вы все сделали верно в процессе регистрации. В этом случае вы всегда можете купить готовый аккаунт.</h2>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
