--- a/app/index-video.html
+++ b/app/index-video.html
@@ -126,7 +126,7 @@
 				</a>
 
 				<a href="#video-5" class="type-item video-item open-form-button">
-					<p>Отзыв Антона Новикова об обучении Amazing Cash</p>
+					<p>Отзыв Антона Новикова о бизнесе на Amazon "под ключ"</p>
 					<div class="play-video" style="background-image: url('img/video-5.png');">
 						<span class="play">
 							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
@@ -136,7 +136,7 @@
 				</a>
 
 				<a href="#video-6" class="type-item video-item open-form-button">
-					<p>Отзыв Елены Тим об обучении Amazing Cash</p>
+					<p>Отзыв Елены Тим о бизнесе на Amazon "под ключ"</p>
 					<div class="play-video" style="background-image: url('img/video-6.png');">
 						<span class="play">
 							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
