--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,21 @@
 				<div class="gallery owl-carousel desktop-gallery">
 
 					<div class="slide-item">
+						<h5>Сентябрь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/8/1.jpg" alt="Сентябрь 2020">
+							<img src="img/slides/8/2.jpg" alt="Сентябрь 2020">
+							<img src="img/slides/8/3.jpg" alt="Сентябрь 2020">
+						</div>
+						<h5>Октябрь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/8/4.jpg" alt="Октябрь 2020">
+							<img src="img/slides/8/5.jpg" alt="Октябрь 2020">
+							<img src="img/slides/8/6.jpg" alt="Октябрь 2020">
+						</div>
+					</div>
+
+					<div class="slide-item">
 						<h5>Июль 2020</h5>
 						<div class="res-imgs">
 							<img src="img/slides/7/1.jpg" alt="Июль 2020">
@@ -227,6 +242,24 @@
 
 
 				<div class="gallery owl-carousel mobile-gallery">
+
+					<div class="slide-item">
+						<h5>Сентябрь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/8/1.jpg" alt="Сентябрь 2020">
+							<img src="img/slides/8/2.jpg" alt="Сентябрь 2020">
+							<img src="img/slides/8/3.jpg" alt="Сентябрь 2020">
+						</div>
+					</div>
+
+					<div class="slide-item">
+						<h5>Октябрь 2020</h5>
+						<div class="res-imgs">
+							<img src="img/slides/8/4.jpg" alt="Октябрь 2020">
+							<img src="img/slides/8/5.jpg" alt="Октябрь 2020">
+							<img src="img/slides/8/6.jpg" alt="Октябрь 2020">
+						</div>
+					</div>
 
 					<div class="slide-item">
 						<h5>Июль 2020</h5>
