--- a/app/index-blog.html
+++ b/app/index-blog.html
@@ -81,6 +81,20 @@
 
 			<div class="type-block">
 
+				<a href="/blog/single-private-label.html" class="type-item">
+					<p>Private Label на Amazon</p>
+					<img src="img/blog/single-private-label.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Private Label — это стратегия работы на Amazon, когда вы раскручиваете товар на Amazon с нуля под собственным брендом.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
+				<a href="/blog/single-for-manufacturers.html" class="type-item">
+					<p>Как вывести свой продукт на Amazon? Статья для производителей</p>
+					<img src="img/blog/single-for-manufacturers.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Многие производители задумываются о том, чтобы вывести свой продукт на рынок США с целью заработка в долларах.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
 				<a href="/blog/single-sell-on-marketplace.html" class="type-item">
 					<p>Что выгоднее: торговать на Amazon или на других маркетплейсах?!</p>
 					<img src="img/blog/single-sell-on-marketplace.jpg" alt="image" class="img-responsive">
@@ -141,6 +155,20 @@
 					<p>Предпраздничные продажи в США</p>
 					<img src="img/blog/single-holiday-sales.jpg" alt="image" class="img-responsive">
 					<p class="excerpt">В России основные праздники, которые прямиком влияют на продажи это: Новый год, 14 и 23 февраля, 8 марта.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
+				<a href="/blog/single-need-to-know.html" class="type-item">
+					<p>Что нужно знать, прежде чем начать бизнес на Amazon?</p>
+					<img src="img/blog/single-need-to-know.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">О бизнесе на Amazon много достаточно противоречивой информации в интернете, и очень часто информация либо очень сильно приукрашивается, либо попросту скрывается.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
+				<a href="/blog/single-banned.html" class="type-item">
+					<p>Amazon может забанить продавца без причины?</p>
+					<img src="img/blog/single-banned.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Начинающих продавцов на Amazon обычно очень беспокоит то, что Amazon вдруг по каким-либо неизвестным причинам забанит их аккаунт и они потеряют свои деньги.</p>
 					<p class="watch-button">Читать статью</p>
 				</a>
 
