--- a/app/index-video.html
+++ b/app/index-video.html
@@ -83,64 +83,129 @@
 			<div class="type-block video-block">
 
 				<a href="#video-1" class="type-item video-item open-form-button">
-					<p>Отзыв об Amazing Cash Антон Шуклин</p>
+					<p>Что такое Amazon и как на нём заработать?</p>
 					<div class="play-video" style="background-image: url('img/video-1.jpg');">
-						<!-- <img src="img/video-1.jpg" alt="video-background" class="img-responsive"> -->
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
 				<a href="#video-2" class="type-item video-item open-form-button">
-					<p>Отзыв об Amazing Cash Алексей Хлыстов</p>
-					<div class="play-video" style="background-image: url('img/video-2.png');">
-						<!-- <img src="img/video-1.jpg" alt="video-background" class="img-responsive"> -->
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+					<p>Реалии рынка Amazon</p>
+					<div class="play-video" style="background-image: url('img/video-2.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
 				<a href="#video-3" class="type-item video-item open-form-button">
-					<p>ВЛОГ из США. Доставка товара на Amazon. Заказали товара на 2,7 млн рублей.</p>
-					<div class="play-video" style="background-image: url('img/video-3.png');">
-						<!-- <img src="img/video-3.jpg" alt="video-background" class="img-responsive"> -->
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+					<p>Онлайн Арбитраж на Amazon: работающие и неработающие стратегии</p>
+					<div class="play-video" style="background-image: url('img/video-3.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
 				<a href="#video-4" class="type-item video-item open-form-button">
-					<p>Отзыв Романа Леонтьева об обучении Amazing Cash</p>
-					<div class="play-video" style="background-image: url('img/video-4.png');">
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+					<p>Private Label на Amazon: запуск товара под собственным брендом</p>
+					<div class="play-video" style="background-image: url('img/video-4.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
 				<a href="#video-5" class="type-item video-item open-form-button">
-					<p>Отзыв Антона Новикова о бизнесе на Amazon "под ключ"</p>
-					<div class="play-video" style="background-image: url('img/video-5.png');">
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+					<p>Запуск магазина на Amazon “под ключ”</p>
+					<div class="play-video" style="background-image: url('img/video-5.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
 
 				<a href="#video-6" class="type-item video-item open-form-button">
+					<p>Регистрация аккаунта продавца на Amazon</p>
+					<div class="play-video" style="background-image: url('img/video-6.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-7" class="type-item video-item open-form-button">
+					<p>Поиск товара для продажи на Amazon</p>
+					<div class="play-video" style="background-image: url('img/video-7.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-8" class="type-item video-item open-form-button">
+					<p>Поиск поставщика в Китае и доставка товара до складов Amazon в США</p>
+					<div class="play-video" style="background-image: url('img/video-8.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-9" class="type-item video-item open-form-button">
+					<p>Продвижение продукта на Amazon</p>
+					<div class="play-video" style="background-image: url('img/video-9.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-10" class="type-item video-item open-form-button">
+					<p>Бизнес на Amazon – это развод?</p>
+					<div class="play-video" style="background-image: url('img/video-10.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-11" class="type-item video-item open-form-button">
+					<p>Отзыв об Amazing Cash Антон Шуклин</p>
+					<div class="play-video" style="background-image: url('img/video-11.jpg');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-12" class="type-item video-item open-form-button">
+					<p>Отзыв об Amazing Cash Алексей Хлыстов</p>
+					<div class="play-video" style="background-image: url('img/video-12.png');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-13" class="type-item video-item open-form-button">
+					<p>ВЛОГ из США. Доставка товара на Amazon. Заказали товара на 2,7 млн рублей.</p>
+					<div class="play-video" style="background-image: url('img/video-13.png');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-14" class="type-item video-item open-form-button">
+					<p>Отзыв Романа Леонтьева об обучении Amazing Cash</p>
+					<div class="play-video" style="background-image: url('img/video-14.png');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-15" class="type-item video-item open-form-button">
+					<p>Отзыв Антона Новикова о бизнесе на Amazon "под ключ"</p>
+					<div class="play-video" style="background-image: url('img/video-15.png');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
+					</div>
+					<span class="watch-button">Смотреть видео</span>
+				</a>
+
+				<a href="#video-16" class="type-item video-item open-form-button">
 					<p>Отзыв Елены Тим о бизнесе на Amazon "под ключ"</p>
-					<div class="play-video" style="background-image: url('img/video-6.png');">
-						<span class="play">
-							<span class="button-play"><img src="img/play-button.png" alt="alt"></span>
-						</span>
+					<div class="play-video" style="background-image: url('img/video-16.png');">
+						<span class="play"><span class="button-play"><img src="img/play-button.png" alt="alt"></span></span>
 					</div>
 					<span class="watch-button">Смотреть видео</span>
 				</a>
@@ -213,26 +278,86 @@
 	<div class="d-none">
 
 		<div class="popup-video zoom-anim-dialog" id="video-1">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/HttYB08TZ7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/-jPp8DJQcWQ" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-2">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/4R5jp0-Sh50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/TpfiBWusBUI" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-3">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/-VlFsahlmHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/U50jyC2QndI" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-4">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/xmB6UzcRMZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/_svm-Aq4EAo" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-5">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/PBDp5j_L7Ww" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 
 		<div class="popup-video zoom-anim-dialog" id="video-6">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Iy3AAM2Qax4" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-7">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/BZ-AzNsLgqc" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-8">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/9fxEZ2uq59k" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/UN1V2oQ2ly8" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-10">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/yEoYgQNJLY0" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-11">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/HttYB08TZ7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-12">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/4R5jp0-Sh50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-13">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/-VlFsahlmHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-14">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/xmB6UzcRMZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-15">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<div class="popup-video zoom-anim-dialog" id="video-16">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/CxKPNwrFcWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
